--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <appium-version>9.3.0</appium-version>
         <testng-version>7.10.2</testng-version>
         <selenium-version>4.24.0</selenium-version>
+        <commonsIO-version>2.17.0</commonsIO-version>
+        <jacksonDatBind-version>2.18.0</jacksonDatBind-version>
     </properties>
 
     <dependencies>
@@ -39,7 +41,19 @@
             <version>${selenium-version}</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>${commonsIO-version}</version>
+        </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jacksonDatBind-version}</version>
+        </dependency>
 
     </dependencies>
 
